# agent-forge

./: README.md  conftest.py  manifest.toml  pyproject.toml
agent_forge/: __init__.py  __main__.py  context_builder.py  cooperation.py  core.py  instance_manager.py  lifecycle.py  mcp_server.py  models.py  resource_guard.py  role_matching.py  template_registry.py  user_data.py
agent_forge/adapters/: base.py  claude_code.py  protocol.py
agent_forge/mcp_tools/: chat.py  cooperation.py  lifecycle.py  templates.py
agents/review-bot/: config.toml  soul.md
agents/reviewer/: config.toml
agents/translator/: config.toml  soul.md
agents/worker/: config.toml  soul.md
hooks/: __init__.py  auto_wake.py  idle_check.py  on_command.py  on_mention.py  resource_guard.py
templates/: code-reviewer.toml  comment-translator.toml  security-auditor.toml  task-worker.toml
tests/: test_adapters.py  test_claude_code_adapter.py  test_context_builder.py  test_cooperation.py  test_export_import.py  test_instance_manager.py  test_lifecycle.py  test_mcp_chat.py  test_mcp_cooperation.py  test_mcp_lifecycle.py  test_mcp_server.py  test_mcp_templates.py  test_models.py  test_resource_guard.py  test_role_matching.py  test_template_registry.py  test_user_data.py
