[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-forge"
version = "0.9.3"
description = "AI Agent lifecycle management for EZAgent42 — spawn, destroy, sleep, wake, chat"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "EZAgent42 Team" },
]
keywords = ["agent", "ai", "lifecycle", "ezagent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "tomli>=2.0; python_version < '3.11'",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["agent_forge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
